fixed some spacing between links in mobile menu.

--- a/src/sections/header.scss
+++ b/src/sections/header.scss
@@ -68,6 +68,7 @@
       align-items: center;
       z-index: 1000;
       
+      
       .header__navigation-close {
         position: absolute;
         top: 1rem;
@@ -86,7 +87,11 @@
       }
     }
     .header__menu-item {
+      padding: 1rem;
+      text-align: center;
+      @include breakpoint($large-screen-breakpoint){
       padding: 0.5rem;
+      }
     }
     .header__menu-link {
       text-decoration: none;
